Add action cable

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,23 @@
 <div class="ui small inverted menu">
   <div class="ui container">
-    <a class="item">
-      Chatroom
-    </a>
-    <a class="item">
-      Messages
-    </a>
+    <%= link_to "Chatroom", root_path, class: "item"%>
+    <a class="item">Messages</a>
     <div class="right menu">
       <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">Login</a>
-          <a class="item">Logout</a>
-          <a class="item">Sign Up</a>
+          <% if logged_in? %>
+            <%= link_to 'Logout', logout_path, class: "item", method: :delete %>
+          <% else %>
+          <%= link_to 'Login', login_path, class: "item" %>
+          <% end%>
         </div>
       </div>
-      <div class="item">
-        <div class="ui primary button">Sign Up</div>
-      </div>
+      <% if !logged_in? %>
+        <div class="item">
+          <%= link_to 'Login', login_path, class: "ui primary button" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
