--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,14 @@
 @import "semantic-ui";
+
+.chatbox {
+  height: 450px;
+}
+
+#messages {
+  overflow: auto;
+  height: 15em;
+}
+
+.input button{
+  display: none;
+}
